--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2? family= Open+Sans:wght@300;400;700 & display=swap');
-:root{
+:root {
     --bg-gray: #ddd;
     --text-gray: #4a4a4a;
     --color-primary: #4D41C0;
@@ -12,7 +12,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
@@ -34,11 +34,11 @@ nav {
     justify-content: space-between;
 }
 
-nav h1{
+nav h1 {
     font-size: 24px;
     font-weight: 700;
 }
-nav a{
+nav a {
     font-size: 12px;
     font-weight: 400;
 
@@ -49,44 +49,48 @@ a, a:hover {
     color: unset;
 }
 
-.dsmovie-contact-container{
+.dsmovie-contact-container {
     display: flex;
     align-items: center;
 }
 
-.dsmovie-contact-container img{
+.dsmovie-contact-container img {
     margin-right: 10px;
 }
 
-#dsmovie-card-list{
+#dsmovie-card-list {
     padding: 40px 0;
 }
 
-.dsmovie-card{
-    width: 360px;
+.dsmovie-card {
+    width: 100%;
+    min-width: 150px;
 }
 
-.dsmovie-card img{
+.dsmovie-card img {
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
 
-.dsmovie-card-description{
+.dsmovie-card-description {
     background-color: var(--white);
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 
-.dsmovie-card-description h3{
+.dsmovie-card-description h3 {
     font-size: 14px;
     font-weight: 700;
-    margin-btn: 25px;
+    margin-bottom: 25px;
+    text-align: center;
 }
 
-.dsmovie-btn, .dsmovie-btn:hover{
+.dsmovie-btn, .dsmovie-btn:hover {
     width: 180px;
     height: 40px;
     background-color: var(--color-primary);
